etc/init.d/vz*: clean up VZREBOOTDIR
First, it makes sense to clean up VZREBOOTDIR just before saving
the list of now-running CTs in stop_ve()

Second, since the previous commit we are not starting CTs having
ONBOOT=no, so they are not cleared up from VZREBOOTDIR. So, clean
up VZREBOOTDIR right after getting the list.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit 74cdb9b546fc96ee5fe4dfbdcc4c8b1225666f6d)

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -135,6 +135,7 @@ start_ve() {
 
 	# CTs that were running before a reboot
 	velist=$(ls $VZREBOOTDIR)
+	rm -f $VZREBOOTDIR/*
 	# ... and not have ONBOOT=no
 	test -n "$velist" && velist=$(vzlist -aH -octid,onboot $velist |
 			awk '$2 != "no" {print $1}')
@@ -193,6 +194,7 @@ stop_ve() {
 	fi
 
 	# Pre-stop stage
+	rm -f $VZREBOOTDIR/*
 	velist=$(vzlist -1 2>/dev/null)
 	for veid in $velist; do
 		# Equalize cpuunits for all CTs
