--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -293,6 +293,7 @@ start_ves()
 	need_restart=""
 	# CTs that were running before a reboot
 	velist=$(ls $VZREBOOTDIR)
+	rm -f $VZREBOOTDIR/*
 	# ... and not have ONBOOT=no
 	test -n "$velist" && velist=$(vzlist -aH -octid,onboot $velist |
 			awk '$2 != "no" {print $1}')
@@ -338,6 +339,7 @@ stop_ves()
 	fi
 
 	# Pre-stop stage
+	rm -f $VZREBOOTDIR/*
 	velist=$(vzlist -1 2>/dev/null)
 	for veid in $velist; do
 		# Equalize cpuunits for all CTs
