configure: fix 'arch support openvz kernel' test case
The file vzsyscalls.h has its constant definitions enclosed within
VZ_KERNEL_SUPPORTED. This has the desired effect of not including any
of those definitions - including the #error condition on non-suported
arches - during normal compilation.

When we compile test vzsyscalls.h, however, that constant is not yet
defined and we'll skip it all. As a side effect, the test will always
succeed.

This slip happened because I started writing those patches using
inverted logic: The file initially had #ifndef VZ_KERNEL_NOT_SUPPORTED,
that would be defined if the initial compilation failed. This logic was
changed in the published version, and the bug ended up appearing.

The fix is to temporarily define the constant during the compilation
of the test program. AC_DEFINE is usually used for this, but since there
is no AC_UNDEFINE, it is cleaner to just manually do it in the prologue
section of AC_LANG_PROGRAM.

Signed-off-by: Glauber Costa <glommer@parallels.com>

--- a/configure.ac
+++ b/configure.ac
@@ -202,11 +202,15 @@ AC_ARG_WITH([vz],
 
 AS_IF([test "x$with_vz" = "x+vz"],
 # vzsyscalls.h will encode the knowledge of which syscalls are supported in
-# which archs, and determine whether or not the VZ_KERNEL is usable. For now
-# we will only disable it if we can't really use it.
-
+# which archs, and determine whether or not the VZ_KERNEL is usable. During
+# normal operation, this file in enclosed within VZ_KERNEL_SUPPORTED, so as
+# to get it out of the way during compilation. To check for it, we manually
+# define the constant in the test program
 [AC_MSG_CHECKING([if current architecture supported by OpenVZ])
-AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include "${srcdir}/include/vzsyscalls.h"]])],
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([
+	[#define VZ_KERNEL_SUPPORTED
+	#include "${srcdir}/include/vzsyscalls.h"]])
+	],
 	[AC_DEFINE(VZ_KERNEL_SUPPORTED)
 	 AM_CONDITIONAL(HAVE_VZ_KERNEL, true)
 	 AC_MSG_RESULT([yes])
