etc/init.d/vz-gentoo: fix missing VZREBOOTDIR
That was pretty lame from my side. Fix for commit af5bf43.

http://bugzilla.openvz.org/2467

Reported-by: Andrei Vinogradov <spamslepnoga@inbox.ru>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit 9e84e33023a31bc65479784113aad10c69ba0e36)

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -17,6 +17,7 @@ check_config() {
 	: ${VZVEINFO:=/proc/vz/veinfo}
 	: ${VESTAT:=/proc/vz/vestat}
 	: ${VPSCONFDIR:=@VPSCONFDIR@}
+	: ${VZREBOOTDIR:=@VZREBOOTDIR@}
 	: ${VZDEV:=venet0}
 	: ${VZCONF:=@PKGCONFDIR@/vz.conf}
 	: ${VE_STOP_MODE:=suspend}
