etc/init.d: move VZREBOOTDIR to vz-redhat
VZREBOOT declaration should be right here in vz-redhat script
not in initd-functions.

initd-functions is a compatibility layer for Debian and Red Hat
systems, it contains everything that is different between Deb and RH,
such as VARLOCK location.

This is a fix to commit af5bf43.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -42,6 +42,7 @@
 
 VZQUOTA=@SBINDIR@/vzquota
 CONFIG_DIR=@PKGCONFDIR@/conf
+VZREBOOTDIR=@VZREBOOTDIR@
 LOCKFILE=$VARLOCK/vz_lock
 SUBSYS_VZ=$VARLOCK/vz
 VESTAT=/proc/vz/vestat
