--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -123,10 +123,6 @@ while test $# -gt 0; do
 		rm -f $STOREDIR/ubc.*.held
 		;;
 	-c|--color)
-		if ! test -z "$watch"; then
-			echo "Error: can't use --watch and --color together"
-			usage 1
-		fi
 		color=1
 		AWK_COLORS="-v c_h=$C_BRIGHT -v c_n=$C_NORMAL -v c_w=$C_WARNING -v c_e=$C_ERROR"
 		;;
@@ -154,6 +150,12 @@ while test $# -gt 0; do
 	esac
 	shift
 done
+
+# Sanity checks
+if test -n "$watch" -a -n "$color"; then
+	echo "Error: can't use --watch and --color together"
+	usage 1
+fi
 
 if test -n "$thr" -a -z "$color" -a -z "$quiet"; then
 	echo "Error: -qh and -qm only make sense with --quiet or --color"
