--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -248,13 +248,15 @@ get_time () {
 }
 
 get_ploop_info() {
-	local dev top img
+	local dev top img root private
 
-	dev=$(awk '$2=="'$VE_ROOT'" {print $1}' /proc/mounts | \
+	root=$(readlink -f "$VE_ROOT")
+	private=$(readlink -f "$VE_PRIVATE")
+	dev=$(awk '$2=="'$root'" {print $1}' /proc/mounts | \
 		sed -e 's|^/dev/||' -e 's|p1$||') || return 1
 	top=$(cat /sys/block/${dev}/pstate/top) || return 1
 	img=$(cat /sys/block/${dev}/pdelta/${top}/image) || return 1
-	TOP_DELTA=$(echo $img | sed "s|^${VE_PRIVATE}/||") || return 1
+	TOP_DELTA=$(echo $img | sed "s|^${private}/||") || return 1
 	PLOOP_DEV="${dev}"
 }
 
