--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -488,14 +488,17 @@ if [ "$PLOOP" = "yes" ]; then
 	fi
 fi
 
-log 2 "Checking IPs on destination node: $IP_ADDRESS"
-for IP in $IP_ADDRESS; do
-	if [ $($SSH "root@$host" "grep -c \" $IP \" /proc/vz/veip") -gt 0 ];
-	then
-		log 0 "IP address $IP already in use on destination node"
-		exit $MIG_ERR_IP_IN_USE
-	fi
-done
+# Check that IP_ADDRESSes are not in use on dest
+# remove extra spaces and netmasks
+IP_X=$(echo $IP_ADDRESS " " | sed 's@/[0-9][0-9]*[[:space:]]@ @g')
+log 2 "Checking IPs on destination node: $IP_X"
+# remove extra spaces, replace spaces with |
+IP_X=$(echo $IP_X | sed 's/ /|/g')
+# do check
+if [ $($SSH "root@$host" "grep -cwE \"$IP_X\" /proc/vz/veip") -gt 0 ]; then
+	log 0 "IP address(es) already in use on destination node"
+	exit $MIG_ERR_IP_IN_USE
+fi
 
 log 1 "Preparing remote node"
 
