--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,6 +31,7 @@ sbin_PROGRAMS = arpsend \
                 ndsend \
                 vzcalc \
                 vzcfgvalidate \
+                vzcptcheck \
                 vzctl \
                 vzlist \
                 vzmemcheck \
