Add vzctl to OOM group configuration
In order to prevent it from being killed leaving a CT in some
unpredictable state.

Reference: PSBM-19049
Reference: vzctl@857688

--- a/etc/oom-groups.conf
+++ b/etc/oom-groups.conf
@@ -78,3 +78,6 @@ pop3d		cyrus-master	-500	-100
 # PostgreSQL
 postmaster	init		-500	-500
 postmaster	postmaster	-500	-100
+
+# Ourself
+vzctl		*		0	-500
