vzctl set --diskspace: require --save for ploop
For ploop case, vzctl set --diskspace is something special:
the value from configuration file is NOT applied during
vzctl start (we don't want to do fs resize on every start),
it is only applied immediately (i.e. we resize right from
vzctl set).

The problem is if we do vzctl set --diskspace without --save,
CT config file will have old value forever, even after restart,
despite the message printed by vzctl:

	WARNING: Settings were not saved to config and
	will be lost after CT restart (use --save flag)

and after that diskspace in CT config will differ from the actual one.

There are a few ways to solve this

1. Never save DISKSPACE to configuration file
2. Do FS resize on vzctl start
3. Require --save for --diskspace on ploop

We do with solution #3, others are more problematic.

Modify vzctl(8) man page accordingly.

Reference: PSBM-16988
Reference: vzctl@865696

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -668,6 +668,9 @@ First parameter is soft limit, second is hard limit.
 For \fBploop\fR layout, initiates the procedure of resizing
 the ploop image file to the new size. Since there is no soft/hard
 limit concept in ploop, second \fInum\fR, if specified, is ignored.
+Note that such resize is NOT performed on container start, so
+for consistency \fB--diskspace\fR must be used together
+with \fB--save\fR flag.
 
 Suffixes \fBG\fR, \fBM\fR, \fBK\fR can also be specified
 (see \fBResource limits\fR section for more info on suffixes).
