--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -253,6 +253,7 @@ it does not exists.
 Note that this option is not saved in configuration file at all (so
 \fB--save\fR flag is useless), it is applied directly to the container,
 by running distribution-specific programs inside the container.
+It is not recommended to combine this option with any other options.
 
 In case container was not running, it is automatically started
 then all the appropriate changes are applied, then it is stopped.
