host uid and gid parameters
When running with an upstream Linux kernel that supports user namespaces,
we will run the container using an unprivileged user in the system. That
can be any user, and it serves as base to a 1:1 mapping between users in
the container and users in the host.

By default, the value 100000 will be used for both uid and gid.

Signed-off-by: Glauber Costa <glommer@parallels.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/vz.conf.in
+++ b/etc/vz.conf.in
@@ -39,6 +39,10 @@ DEF_OSTEMPLATE="centos-5"
 ## Filesystem layout for new CTs: either simfs (default) or ploop
 #VE_LAYOUT=ploop
 
+# User namespace configuration
+LOCAL_UID=100000
+LOCAL_GID=100000
+
 ## Load vzwdog module
 VZWDOG="no"
 
