Remove more traces of noatime flag
As per commit 127ad44, --noatime is no longer supported.

This patch:
1. removes the last trace of it from bash_completion script
2. removes the last mention of it from ctid.conf(5) man page
3. removes parsing (ignoring) of --noatime from cmdline
4. removes ignoring of NOATIME from config file

Ignoring --noatime from cmdline  was deliberately left there in order
to maintain backward compatibility. Apparently it doesn't work because
it has an argument:

	# vzctl set ${ve} --noatime yes --save
	non-option ARGV-elements: --save

We'd better put an "unknown option" error.

Reported-by: Nick Knutov <mail@knutov.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -158,7 +158,7 @@ _vzctl()
 						    @SCRIPTDIR@/vps-download --list)" -- $cur ) )
 
 				;;
-			--onboot|--disabled|--noatime|--diskquota)
+			--onboot|--disabled|--diskquota)
 				COMPREPLY=( $( compgen -W "yes no" -- $cur ) )
 				;;
 			--setmode)
