etc/init.d/vz*: try to run vzstats
Run vzstats if it is available to report new kernel.

For more info about vzstats, check http://stats.openvz.org/

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -343,6 +343,8 @@ start() {
 	setup_ve0
 	modify_vzconf
 	start_ve
+	# Try to run vzstats to submit new kernel info
+	vzstats >/dev/null 2>&1
 }
 
 stop() {
